--- a/events.html
+++ b/events.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <a href="index1.html">
+            <a href="index.html">
                 <img src="nasaLogo.png" class="logo" alt="NASA Logo">
             </a>
             <nav>
                 <ul>
-                    <li><a href="index1.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                 </ul>
             </nav>
         </div>
